--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -4,7 +4,8 @@
     "extensions": ["o", "a", "obj", "pyc"],
     "filenames": ["node_modules", "lib"],
     "patternMatches": ["^\\."]
-  }
+  },
+  "eslint.experimental.useFlatConfig": false
   // "explorer.file.reveal.filter": {
   //   "literals": ["node_modules"]
   // }
